--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </nav>
         </header>
 
-        <p class="home">HELLOCUS</p>
+        <p class="home">HELLOCUS Mar</p>
 
     </body>
 </html>
