--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>HTML & CSS Cheatsheet - Home</title>
-        <link href=".index.css" type="text/css" rel="stylesheet">
+        <link href="index.css" type="text/css" rel="stylesheet">
     </head>
 
     <body>
